--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nonebot-plugin-dify"
-version = "0.1.3"
+version = "0.1.4"
 description = "A Nonebot plugin for interacting with Dify"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -23,7 +23,9 @@ classifiers = [
 
 # 项目的依赖项
 dependencies = [
+    "nonebot2>=2.3.0",
     "nonebot-plugin-alconna>=0.50.2",
+    "nonebot-plugin-localstore>=0.7.0",
     "httpx>=0.27.0"
 ]
 
